# fhe-attack-replay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  NOTICE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml  release-binaries.yml
action/: action.yml
docs/: ROADMAP.md  pr-gates.md  status-semantics.md
examples/: bfv-128-mitigated.json  bfv-128-vulnerable.json  bfv-128.json  ckks-128.json  toy-lwe-mitigated.json  toy-lwe-vulnerable.json
src/fhe_attack_replay/: __init__.py  cli.py  registry.py  report.py  runner.py
src/fhe_attack_replay/adapters/: __init__.py  base.py  lattigo.py  openfhe.py  seal.py  seal_python.py  tfhe_rs.py  toy_lwe.py
src/fhe_attack_replay/attacks/: __init__.py  _correlation.py  base.py  cheon_2024_127.py  eprint_2025_867.py  glitchfhe_usenix25.py  guo_qian_usenix24.py  reveal_2023_1128.py
src/fhe_attack_replay/lab/: __init__.py  toy_lwe.py
tests/: conftest.py  test_cheon_2024_127.py  test_cheon_replay.py  test_cheon_review_followups.py  test_cli.py  test_coverage_gaps.py  test_eprint_2025_867_artifact.py  test_eprint_2025_867_live.py  test_glitchfhe_analyzer.py  test_lattigo_replay.py  test_new_modules.py  test_openfhe_serialization.py  test_registry.py  test_report.py  test_reveal_analyzer.py  test_review_fixes.py  test_runner.py  test_seal_adapter.py  test_seal_python_adapter.py  test_toy_lwe.py
tests/fixtures/: openfhe_bfv_ciphertext.json
